Revised accessions dashboard; Added Orcid Authentication error web page; Added a few API methods; Added GitHub link to copo_visual_documentation
